--- a/notebooks/MFSU_Simulator.ipynb
+++ b/notebooks/MFSU_Simulator.ipynb
@@ -6,7 +6,7 @@
       "source": [
         "# Unified Fractal-Stochastic Model Simulator (MFSU)\n",
         "\n",
-        "This Jupyter Notebook interactively explores the Unified Stochastic Fractal Model (MFSU), a theoretical-experimental framework that integrates fractal geometry, stochastic processes, and quantum field theory. It is applied to superconductivity, gas dynamics, and cosmology, predicting critical properties like superconducting transition temperatures (\( T_c \)) and cosmological density fields.\n",
+        "This Jupyter Notebook interactively explores the Unified Stochastic Fractal Model (MFSU), a theoretical-experimental framework that integrates fractal geometry, stochastic processes, and quantum field theory. It is applied to superconductivity, gas dynamics, and cosmology, predicting critical properties like superconducting transition temperatures (\\( T_c \\)) and cosmological density fields.\n",
         "\n",
         "Source code and data are available at [https://github.com/MiguelAngelFrancoLeon/MiguelAngelFrancoLeon-MFSU-Fractal-Dynamics](https://github.com/MiguelAngelFrancoLeon/MiguelAngelFrancoLeon-MFSU-Fractal-Dynamics). See `Documentation/MFSU_Theory.pdf` for full details."
       ]
@@ -173,14 +173,14 @@
         "widgets.interact(plot_propagator,\n",
         "                 df=widgets.FloatSlider(value=1.5, min=1.0, max=3.0, step=0.01),\n",
         "                 m=widgets.FloatSlider(value=1.0, min=0.1, max=5.0, step=0.1),\n",
-        "                 lam=widgets.FloatSlider(value=1.0, min=0.0, max=5.0, step=0.1));"
+        "                 lam=widgets.FloatSlider(value=1.0, min=0.0, max=5.0, step=0.1))"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "## 6. Critical Temperature \( T_c(d_f) \) Interactive"
+        "## 6. Critical Temperature \\( T_c(d_f) \\) Interactive"
       ]
     },
     {
@@ -206,7 +206,7 @@
         "\n",
         "widgets.interact(plot_Tc,\n",
         "                 C=widgets.FloatSlider(value=350, min=100, max=500, step=10),\n",
-        "                 delta=widgets.FloatSlider(value=0.01, min=0.001, max=0.1, step=0.001));"
+        "                 delta=widgets.FloatSlider(value=0.01, min=0.001, max=0.1, step=0.001))"
       ]
     },
     {
@@ -238,7 +238,7 @@
         "plt.show()\n",
         "\n",
         "display(Markdown('### Superconductivity Analysis'))\n",
-        "display(Markdown('Data from `RvT_300K.csv` shows a critical temperature \( T_c \approx 301 \pm 4 \, \text{K} \), consistent with MFSU predictions.'))"
+        "display(Markdown('Data from `RvT_300K.csv` shows a critical temperature \\( T_c \\approx 301 \\pm 4 \\, \\text{K} \\), consistent with MFSU predictions.'))"
       ]
     },
     {
@@ -263,13 +263,23 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3 (ipykernel)",
       "language": "python",
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
-      "version": "3.11"
-    }
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.0"
+    },
+    "nbformat": 4,
+    "nbformat_minor": 5
   }
 }
